force-app/main/default/objects/RecordType_Map__mdt/RecordType_Map__mdt.object-meta.xml
<CustomObject>
    <description>Maps SNAP vs ADI Record Types per SObject</description>
    <label>RecordType Map</label>
    <pluralLabel>RecordType Maps</pluralLabel>
</CustomObject>