force-app/main/default/objects/RecordType_Map__mdt/fields/RecordTypeIdADI__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeIdADI__c</fullName>
    <label>Record Type Id ADI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>