force-app/main/default/objects/RecordType_Map__mdt/fields/RecordTypeIdSNAP__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeIdSNAP__c</fullName>
    <label>Record Type Id SNAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>