force-app/main/default/objects/RecordType_Map__mdt/fields/RecordTypeLabelADI__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeLabelADI__c</fullName>
    <label>Record Type Label ADI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>