force-app/main/default/objects/RecordType_Map__mdt/fields/RecordTypeLabelSNAP__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeLabelSNAP__c</fullName>
    <label>Record Type Label SNAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>