force-app/main/default/objects/RecordType_Map__mdt/fields/SObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>SObjectApiName__c</fullName>
    <label>SObject API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>